create meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/marujo_icon.svg" />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name='Landing page empresa marujo performance'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
