--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="pt-br">
 
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NWMBP9CD');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/marujo_icon.svg" />
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Landing Page,
     Empresa: Marujo Performance, especialista em tráfego pago">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
@@ -15,6 +22,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWMBP9CD"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
