--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/marujo_icon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
   <meta name="description" content="Landing Page,
     Empresa: Marujo Performance, especialista em tráfego pago">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0">
